Re-aligned Image map demesions

--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -114,11 +114,11 @@
         <figure id="fig2">
             <img id="fig2-image" src="../images/JS-CSS-HTML.png" alt="3 layer standard web technologies" usemap="#weblevels">
             <figcaption>Figure 2 - standard web technologies.</figcaption>
-            <!--<map name="weblevels">
-                <area shape="poly" coords="61,122,59,315,767,401,1475,312,1471,127,768,50" href="topic2.html">
-                <area shape="poly" coords="60,372,57,561,766,647,1474,559,1471,373,1227,347,766,404,309,347" href="topic3.html">
-                <area shape="poly" coords="57,620,61,804,764,895,1470,808,1473,619,1225,593,764,653,302,593" href="topic4.html">
-            </map>-->
+            <map name="weblevels">
+                <area shape="poly" " coords="59,315,59,126,767,53,1473,123,1471,314,766,403" href="topic2.html"> <!--JAVASCRIPT-->
+                <area shape="poly" coords="60,373,302,346,766,401,1231,345,1471,373,1474,562,767,650,59,559" href="topic3.html"> <!---CSS-->
+                <area shape="poly" coords="60,619,298,593,768,650,1227,592,1473,619,1474,807,767,895,57,810" href="topic4.html"> <!--HTML-->
+            </map>
         </figure>
 
         <p>JavaScript, often referred to as JS for short is a <em>scripting or programming language used primarily in
