--- a/assign1/enhancements.html
+++ b/assign1/enhancements.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="javascript, enhancements">
     <meta name="author" content="Eloise Ridder-Strickland, Oshadi Dewmini Pattiarachchi, Lucy Yu">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" type="image/x-icon" href="../images/icon/favicon.ico">
     <title>Website enhancements</title>
     <!-- embedded code for external google font "Share Tech" -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
