Image Map Test2

--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -116,9 +116,9 @@
             <img id="fig2-image" src="../images/JS-CSS-HTML.png" alt="3 layer standard web technologies" usemap="weblevels">
             <figcaption>Figure 2 - standard web technologies.</figcaption>
             <map name="weblevels">
-                <area target="topic2.html" alt="3 layer standard web technologies" title="JavaScrip" href="topic2.html" coords="59,126,767,51,1474,124,1471,315,766,404,59,314" shape="poly">
-                <area target="topic3.html" alt="3 layer standard web technologies" title="CSS" href="topic3.html" coords="64,372,302,346,769,405,1230,347,1473,374,1477,559,769,649,62,561" shape="poly">
-                <area target="topic4.html" alt="3 layer standard web technologies" title="HTML" href="topic4.html" coords="60,618,302,592,768,650,1233,593,1474,619,1473,812,764,896,61,808" shape="poly">
+                <area target="_blank" alt="3 layer standard web technologies" title="JavaScrip" href="topic2.html" coords="59,126,767,51,1474,124,1471,315,766,404,59,314" shape="poly">
+                <area target="_blank" alt="3 layer standard web technologies" title="CSS" href="topic3.html" coords="64,372,302,346,769,405,1230,347,1473,374,1477,559,769,649,62,561" shape="poly">
+                <area target="_blank" alt="3 layer standard web technologies" title="HTML" href="topic4.html" coords="60,618,302,592,768,650,1233,593,1474,619,1473,812,764,896,61,808" shape="poly">
             </map>
         </figure>
 
