--- a/assign1/enhancements.html
+++ b/assign1/enhancements.html
@@ -7,13 +7,18 @@
     <meta name="description" content="enhancements page for COS10032 assignment 1 on topic Javascript">
     <meta name="keywords" content="javascript, enhancements">
     <meta name="author" content="Eloise Ridder-Strickland, Oshadi Dewmini Pattiarachchi, Lucy Yu">
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" type="image/x-icon" href="../images/icon/favicon.ico">
     <title>Website enhancements</title>
     <!-- embedded code for external google font "Share Tech" -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
+    <!-- css  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/custom.css">
+
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -26,14 +31,17 @@
 
         <nav id="header-right">
             <ul class="nav-list">
-            <li class="nav-list-item"><a href="index.html" class="header-navigation-link">HOME</a></li>
+                <li class="nav-list-item"><a href="index.html" class="header-navigation-link">HOME</a></li>
 
-            <li class="nav-list-item"><a href="topic.html" class="header-navigation-link">WHAT IS JAVASCRIPT?</a></li>
+                <li class="nav-list-item"><a href="topic.html" class="header-navigation-link">WHAT IS JAVASCRIPT?</a>
+                </li>
 
-            <li class="nav-list-item"><a href="quiz.html" class="header-navigation-link">TEST YOUR KNOWLEDGE</a></li>
+                <li class="nav-list-item"><a href="quiz.html" class="header-navigation-link">TEST YOUR KNOWLEDGE</a>
+                </li>
 
-            <li class="nav-list-item"><a href="enhancements.html" class="header-navigation-link">ENHANCEMENTS</a></li>
-        </ul>
+                <li class="nav-list-item"><a href="enhancements.html" class="header-navigation-link">ENHANCEMENTS</a>
+                </li>
+            </ul>
         </nav>
     </header>
 
