tweaks to bootstrap

--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -87,13 +87,14 @@
 
         </ol>
 
-        <div class="col-md-4 col-12">
-            <figure id="fig1">
+        <div class="col-md-4 offset 1 col-12">
+            <figure class="mb-4" id="fig1">
                 <img class="img-fluid d-sm-inline d-block" id="fig1-image" src="../images/Brendan_Eich.jpeg"
                     alt="brendan-eich-javascript-inventor">
                 <figcaption>Figure 1 - Brendan Eich, inventor of JavaScript.</figcaption>
             </figure>
         </div>
+
         <ol>
             <li><span class="date">1995 November:</span> Microsoft reverse engineers JavaScript and develops JScript
                 which is released on Internet
