Change of Image formatt .png to .svg

--- a/assign1/topic2.html
+++ b/assign1/topic2.html
@@ -11,7 +11,7 @@
 	<body>
 		<header><h1>JavaScript</h1></header>
 		<p><strong>JavaScript is Layer 3</strong> of the <em>layer cake of standard web technologies</em></p>
-	    <a>  </a>
+	    <a>href="""  </a>
 	</body>
 
 </html>
