Updated Coords - Image Map

--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -127,18 +127,16 @@
         <div class="container">
             <div class="col-lg-4 col-8 mx-auto">
                 <figure id="fig2">
-                    <img class="img-fluid" id="fig2-image" src="../images/JS-CSS-HTML.png"
-                        alt="3 layer standard web technologies" usemap="#weblevels">
+                    <img class="img-fluid" id="fig2-image" src="../images/JS-CSS-HTML.svg" alt="3 layer standard web technologies" usemap="#weblevels">
                     <figcaption>Figure 2 - standard web technologies.</figcaption>
                     <map name="weblevels">
-                        <area shape="poly" " coords=" 59,315,59,126,767,53,1473,123,1471,314,766,403"
-                            href="topic2.html">
                         <!--JAVASCRIPT-->
-                        <area shape="poly" coords="60,373,302,346,766,401,1231,345,1471,373,1474,562,767,650,59,559"
-                            href="topic3.html"> <!---CSS-->
-                        <area shape="poly" coords="60,619,298,593,768,650,1227,592,1473,619,1474,807,767,895,57,810"
-                            href="topic4.html"> <!--HTML-->
-                    </map>
+                        <area shape="poly" coords="60,126,767,50,1471,126,1474,314,763,401,61,314" alt="javascript" href="topic2.html">
+                        <!--CSS-->
+                        <area shape="poly" coords="60,373,303,346,766,404,1224,347,1473,373,1471,562,767,650,59,561" alt="css" href="topic3.html">
+                        <!--HTML-->
+                        <area shape="poly" coords="61,620,299,592,766,650,1231,595,1474,619,1471,808,764,895,59,808" alt="html" href="topic4.html">
+                      </map>
                 </figure>
             </div>
         </div>
