--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -53,7 +53,8 @@
     <section id="origins">
         <h3>History</h3>
 
-        <div id="history-summary" class="col-sm-auto col-11 offset-1">
+        <div class="container-fluid">
+        <div id="history-summary" class="col-sm-auto col-11">
             <h4 id="quick-summary-heading">Quick Summary</h4>
             <dl>
                 <dt>Official name</dt>
@@ -64,7 +65,7 @@
                 <dd>Brendan Eich</dd>
             </dl>
         </div>
-
+</div>
         <p>
             The history of JavaScript is fascinating and to understand it we need to rewind the clock back almost 40
             years.
@@ -87,14 +88,15 @@
 
         </ol>
 
-        <div class="col-md-4 offset 1 col-12">
+<div class="row">
+        <div class="col-md-4">
             <figure class="mb-4" id="fig1">
                 <img class="img-fluid d-sm-inline d-block" id="fig1-image" src="../images/Brendan_Eich.jpeg"
                     alt="brendan-eich-javascript-inventor">
                 <figcaption>Figure 1 - Brendan Eich, inventor of JavaScript.</figcaption>
             </figure>
         </div>
-
+<div class="col-md-8">
         <ol>
             <li><span class="date">1995 November:</span> Microsoft reverse engineers JavaScript and develops JScript
                 which is released on Internet
@@ -119,7 +121,8 @@
                     href="https://ecma-international.org/publications-and-standards/standards/ecma-262/">Click here</a>
                 to view the ECMA-262 editions</li>
         </ol>
-
+</div>
+</div>
     </section>
 
     <section id="function">
@@ -160,8 +163,9 @@
         </p>
     </section>
 
-    <div class="container">
-        <aside class="col-md-4 col-11 offset-1" id="Java">
+    
+    <div class="container-fluid">
+        <aside class="col-md-4 col-12" id="Java">
             JavaScript is often confused with Java however they are different! Java is a high level object oriented
             programming language used for multiple complex and sophisticated applications such as Android apps,
             financial
@@ -171,6 +175,7 @@
             well as connect web applications to servers.
         </aside>
     </div>
+
 
     <section id="current">
         <h3>Current state of Javascript</h3>
