Update to coords

--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -130,15 +130,15 @@
         <div class="container">
             <div class="col-lg-4 col-8 mx-auto">
                 <figure id="fig2">
-                    <img class="img-fluid" id="fig2-image" src="../images/JS-CSS-HTML.svg" alt="3 layer standard web technologies" usemap="#weblevels">
+                    <img class="img-fluid" id="fig2-image" src="../images/JS-CSS-HTML.png" alt="3 layer standard web technologies" usemap="#weblevels">
                     <figcaption>Figure 2 - standard web technologies.</figcaption>
                     <map name="weblevels">
                         <!--JAVASCRIPT-->
-                        <area shape="poly" coords="60,126,767,50,1471,126,1474,314,763,401,61,314" alt="javascript" href="topic2.html">
+                        <area shape="poly" coords="" alt="javascript" href="topic2.html">
                         <!--CSS-->
-                        <area shape="poly" coords="60,373,303,346,766,404,1224,347,1473,373,1471,562,767,650,59,561" alt="css" href="topic3.html">
+                        <area shape="poly" coords="" alt="css" href="topic3.html">
                         <!--HTML-->
-                        <area shape="poly" coords="61,620,299,592,766,650,1231,595,1474,619,1471,808,764,895,59,808" alt="html" href="topic4.html">
+                        <area shape="poly" coords="" alt="" href="topic4.html">
                       </map>
                 </figure>
             </div>
