removed bootstrap on image map image

--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -128,9 +128,9 @@
     <section id="function">
         <h3>What does Javascript do?</h3>
         <div class="container">
-            <div class="col-lg-4 col-8 mx-auto">
+            <div>
                 <figure id="fig2">
-                    <img class="img-fluid" id="fig2-image" src="../images/JS-CSS-HTML.png" alt="3 layer standard web technologies" usemap="#weblevels">
+                    <img id="fig2-image" src="../images/JS-CSS-HTML.png" alt="3 layer standard web technologies" usemap="#weblevels">
                     <figcaption>Figure 2 - standard web technologies.</figcaption>
                     <map name="weblevels">
                         <!--JAVASCRIPT-->
