--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -134,11 +134,11 @@
                     <figcaption>Figure 2 - standard web technologies.</figcaption>
                     <map name="weblevels">
                         <!--JAVASCRIPT-->
-                        <area shape="poly" coords="" alt="javascript" href="topic2.html">
+                        <area shape="poly" coords="12,26,154,11,298,26,298,64,156,82,12,63" alt="javascript" href="topic2.html">
                         <!--CSS-->
-                        <area shape="poly" coords="" alt="css" href="topic3.html">
+                        <area shape="poly" coords="13,75,12,113,156,131,299,113,298,75,249,70,156,83,63,71" alt="css" href="topic3.html">
                         <!--HTML-->
-                        <area shape="poly" coords="" alt="" href="topic4.html">
+                        <area shape="poly" coords="12,125,12,162,155,181,298,163,298,126,247,119,155,131,68,119" alt="" href="topic4.html">
                       </map>
                 </figure>
             </div>
