--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -132,7 +132,7 @@
                 <figure id="fig2">
                     <img id="fig2-image" src="../images/JS-CSS-HTML.png" alt="3 layer standard web technologies" usemap="#weblevels">
                     <figcaption>Figure 2 - standard web technologies.</figcaption>
-                    <map name="weblevels">
+                    <map name="weblevels"> <!--None Dynamic Image Map-->
                         <!--JAVASCRIPT-->
                         <area shape="poly" coords="12,26,154,11,298,26,298,64,156,82,12,63" alt="javascript" href="topic2.html">
                         <!--CSS-->
