trying to fix border of fig2

--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -54,18 +54,18 @@
         <h3>History</h3>
 
         <div class="container-fluid">
-        <div id="history-summary" class="col-sm-auto col-11">
-            <h4 id="quick-summary-heading">Quick Summary</h4>
-            <dl>
-                <dt>Official name</dt>
-                <dd>ECMAScript</dd>
-                <dt>Date invented</dt>
-                <dd>September 1995</dd>
-                <dt>Inventor</dt>
-                <dd>Brendan Eich</dd>
-            </dl>
+            <div id="history-summary" class="col-sm-auto col-11">
+                <h4 id="quick-summary-heading">Quick Summary</h4>
+                <dl>
+                    <dt>Official name</dt>
+                    <dd>ECMAScript</dd>
+                    <dt>Date invented</dt>
+                    <dd>September 1995</dd>
+                    <dt>Inventor</dt>
+                    <dd>Brendan Eich</dd>
+                </dl>
+            </div>
         </div>
-</div>
         <p>
             The history of JavaScript is fascinating and to understand it we need to rewind the clock back almost 40
             years.
@@ -88,60 +88,70 @@
 
         </ol>
 
-<div class="row">
-        <div class="col-md-4">
-            <figure class="mb-4" id="fig1">
-                <img class="img-fluid d-sm-inline d-block" id="fig1-image" src="../images/Brendan_Eich.jpeg"
-                    alt="brendan-eich-javascript-inventor">
-                <figcaption>Figure 1 - Brendan Eich, inventor of JavaScript.</figcaption>
-            </figure>
+        <div class="row">
+            <div class="col-md-4">
+                <figure class="mb-4" id="fig1">
+                    <img class="img-fluid d-sm-inline d-block" id="fig1-image" src="../images/Brendan_Eich.jpeg"
+                        alt="brendan-eich-javascript-inventor">
+                    <figcaption>Figure 1 - Brendan Eich, inventor of JavaScript.</figcaption>
+                </figure>
+            </div>
+            <div class="col-md-8">
+                <ol>
+                    <li><span class="date">1995 November:</span> Microsoft reverse engineers JavaScript and develops
+                        JScript
+                        which is released on Internet
+                        Explorer 2.0.</li>
+                    <li><span class="date">1996:</span> JavaScript is taken to the ECMA international standards
+                        organization
+                        where a committee TC39 is
+                        formed to oversee and develop the language. This is hoped to improve cross browser
+                        compatibility, assist
+                        developers and give users a seamless browsing experience. ECMAScript is the official name of the
+                        language. </li>
+                    <li><span class="date">1997:</span> ECMA-262 Edition 1 is released.</li>
+                    <li><span class="date">Early 2000's:</span> Tech companies are still participating in the Browser
+                        Wars to
+                        gain market share and
+                        co-operation is fragmented when developing a standardised language.</li>
+                    <li><span class="date">Late 2000's:</span> JavaScript gains the attention of open source communities
+                        and
+                        many open source developments
+                        are released with JavaScript as the backbone. (jQuery, Prototype, Dojo Toolkid)</li>
+                    <li><span class="date">2008:</span> Large tech players hold a conference and agree to co-operate
+                        efforts in
+                        progressing the language.
+                    </li>
+                    <li><span class="date">2009:</span> ECMAScript 5 standard is released.</li>
+                    <li><span class="date">2023:</span> ECMA-262 Edition 14 is released and is the latest version. <a
+                            href="https://ecma-international.org/publications-and-standards/standards/ecma-262/">Click
+                            here</a>
+                        to view the ECMA-262 editions</li>
+                </ol>
+            </div>
         </div>
-<div class="col-md-8">
-        <ol>
-            <li><span class="date">1995 November:</span> Microsoft reverse engineers JavaScript and develops JScript
-                which is released on Internet
-                Explorer 2.0.</li>
-            <li><span class="date">1996:</span> JavaScript is taken to the ECMA international standards organization
-                where a committee TC39 is
-                formed to oversee and develop the language. This is hoped to improve cross browser compatibility, assist
-                developers and give users a seamless browsing experience. ECMAScript is the official name of the
-                language. </li>
-            <li><span class="date">1997:</span> ECMA-262 Edition 1 is released.</li>
-            <li><span class="date">Early 2000's:</span> Tech companies are still participating in the Browser Wars to
-                gain market share and
-                co-operation is fragmented when developing a standardised language.</li>
-            <li><span class="date">Late 2000's:</span> JavaScript gains the attention of open source communities and
-                many open source developments
-                are released with JavaScript as the backbone. (jQuery, Prototype, Dojo Toolkid)</li>
-            <li><span class="date">2008:</span> Large tech players hold a conference and agree to co-operate efforts in
-                progressing the language.
-            </li>
-            <li><span class="date">2009:</span> ECMAScript 5 standard is released.</li>
-            <li><span class="date">2023:</span> ECMA-262 Edition 14 is released and is the latest version. <a
-                    href="https://ecma-international.org/publications-and-standards/standards/ecma-262/">Click here</a>
-                to view the ECMA-262 editions</li>
-        </ol>
-</div>
-</div>
     </section>
 
     <section id="function">
         <h3>What does Javascript do?</h3>
-        <div class="container">
-            <div>
-                <figure id="fig2">
-                    <img id="fig2-image" src="../images/JS-CSS-HTML.png" alt="3 layer standard web technologies" usemap="#weblevels">
-                    <figcaption>Figure 2 - standard web technologies.</figcaption>
-                    <map name="weblevels"> <!--None Dynamic Image Map-->
-                        <!--JAVASCRIPT-->
-                        <area shape="poly" coords="12,26,154,11,298,26,298,64,156,82,12,63" alt="javascript" href="topic2.html">
-                        <!--CSS-->
-                        <area shape="poly" coords="13,75,12,113,156,131,299,113,298,75,249,70,156,83,63,71" alt="css" href="topic3.html">
-                        <!--HTML-->
-                        <area shape="poly" coords="12,125,12,162,155,181,298,163,298,126,247,119,155,131,68,119" alt="" href="topic4.html">
-                      </map>
-                </figure>
-            </div>
+
+        <div id="figure2">
+            <figure class="fig2">
+                <img id="fig2-image" src="../images/JS-CSS-HTML.png" alt="3 layer standard web technologies"
+                    usemap="#weblevels">
+                <figcaption>Figure 2 - standard web technologies.</figcaption>
+                <map name="weblevels">
+                    <!--JAVASCRIPT-->
+                    <area shape="poly" coords="12,26,154,11,298,26,298,64,156,82,12,63" alt="javascript"
+                        href="topic2.html">
+                    <!--CSS-->
+                    <area shape="poly" coords="13,75,12,113,156,131,299,113,298,75,249,70,156,83,63,71" alt="css"
+                        href="topic3.html">
+                    <!--HTML-->
+                    <area shape="poly" coords="12,125,12,162,155,181,298,163,298,126,247,119,155,131,68,119" alt=""
+                        href="topic4.html">
+                </map>
+            </figure>
         </div>
 
         <p>JavaScript, often referred to as JS for short is a <em>scripting or programming language used primarily in
@@ -163,7 +173,7 @@
         </p>
     </section>
 
-    
+
     <div class="container-fluid">
         <aside class="col-md-4 col-12" id="Java">
             JavaScript is often confused with Java however they are different! Java is a high level object oriented
