--- a/assign1/enhancements.html
+++ b/assign1/enhancements.html
@@ -89,7 +89,8 @@
     <p>An image map has been used to better assist the user in understanding of the topic. <a href="topic.html#figure2"
             target="_blank">Click here.</a></p>
     <p>This is an extension from the assignment as it is an innovative addition to the standard img element requirement.
-        Rather than nesting an image in a single anchor tag, different clickable areas of the image link the user to different
+        Rather than nesting an image in a single anchor tag, different clickable areas of the image link the user to
+        different
         actions. The clickable areas are defined by co-ordinates on the image.
         The following code was used:<br>
         <code>
@@ -129,7 +130,7 @@
     </ul>
 
     <p>It was discovered upon implementation that image maps do not work well with dynamic resizable images therefore
-         the image used is of a fixed size.
+        the image used is of a fixed size.
     </p>
     <h3>Favicon</h3>
 
@@ -154,8 +155,8 @@
     <h3>Tooltips</h3>
 
     <p>Tooltips have been added to the email signature images in the footer of the website upon hover as per below.</p>
-    <p>These enhance the website as they give the user a prompt and a call to action. The tooltips only appear when 
-        necessary, keeping the interface clean and simple.  
+    <p>These enhance the website as they give the user a prompt and a call to action. The tooltips only appear when
+        necessary, keeping the interface clean and simple.
     </p>
 
     <p>The code required for the tooltips are: <br>
@@ -199,7 +200,35 @@
     <p>The technique for making these were sourced from the following:</p>
     <ul>
         <li><a href="https://www.w3schools.com/css/css_tooltip.asp" target="_blank">w3schools tutorial</a></li>
-        <li><a href="https://forum.freecodecamp.org/t/make-tooltip-appear-above-everything-else/507637" target="_blank">FreeCodeCamp forum post</a></li>
+        <li><a href="https://forum.freecodecamp.org/t/make-tooltip-appear-above-everything-else/507637"
+                target="_blank">FreeCodeCamp forum post</a></li>
+    </ul>
+
+    <h3>Flexbox</h3>
+
+    <p>Due to the vision of what we wanted the header to look like, it was necessary to extend beyond the syllabus
+        material, hence flexbox was used for the heading. Flexbox makes it much easier to align items and is also
+        responsive to viewport resizing.
+    </p>
+    <p>Try to resize this page while looking at the header. At narrow widths, the h1 title text will disapear, however 
+        the navigation links are still visible and will move left to occupy the full row.
+    </p>
+    <p>The CSS code used to made a flexbox is: <br>
+    <code>
+        display: flex; <br>
+        flex-direction: row;<br>
+        justify-content:space-between;<br>
+        align-items: center;<br>
+    </code>
+
+    This lets the browser know the header element is a flex box in a horizontal direction and that content should be aligned 
+    evenly across the top. 
+    </p>
+
+    <p>The resources used to make a flexbox include: </p>
+    <ul>
+        <li><a href="https://www.youtube.com/watch?v=G3e-cpL7ofc&t=19205s" target="_blank">Youtube tutorial</a></li>
+        <li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/" target="_blank">CSS tricks website</a></li>
     </ul>
 
     <!-- FOOTER -->
