enhancements - syntax error fixed

--- a/assign1/enhancements.html
+++ b/assign1/enhancements.html
@@ -55,11 +55,12 @@
     </p>
     <p>
         The Bootstrap techniques used were from two main sources:
+    </p>
     <ul>
         <li><a href="https://www.youtube.com/watch?v=Jyvffr3aCp0" target="_blank">This Youtube tutorial</a></li>
         <li><a href="https://getbootstrap.com/" target="_blank">The Bootstrap official website</a></li>
     </ul>
-    </p>
+
     <p>To add the Bootstrap CSS library,
         put the following code in the head tag: <br>
         <code>
@@ -210,25 +211,27 @@
         material, hence flexbox was used for the heading. Flexbox makes it much easier to align items and is also
         responsive to viewport resizing.
     </p>
-    <p>Try to resize this page while looking at the header. At narrow widths, the h1 title text will disapear, however 
+    <p>Try to resize this page while looking at the header. At narrow widths, the h1 title text will disapear, however
         the navigation links are still visible and will move left to occupy the full row.
     </p>
     <p>The CSS code used to made a flexbox is: <br>
-    <code>
+        <code>
         display: flex; <br>
         flex-direction: row;<br>
         justify-content:space-between;<br>
         align-items: center;<br>
     </code>
 
-    This lets the browser know the header element is a flex box in a horizontal direction and that content should be aligned 
-    evenly across the top. 
+        This lets the browser know the header element is a flex box in a horizontal direction and that content should be
+        aligned
+        evenly across the top.
     </p>
 
     <p>The resources used to make a flexbox include: </p>
     <ul>
         <li><a href="https://www.youtube.com/watch?v=G3e-cpL7ofc&t=19205s" target="_blank">Youtube tutorial</a></li>
-        <li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/" target="_blank">CSS tricks website</a></li>
+        <li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/" target="_blank">CSS tricks website</a>
+        </li>
     </ul>
 
     <!-- FOOTER -->
